Fix contact map min-width being too large

--- a/components/ContactSection/contactSection.scss
+++ b/components/ContactSection/contactSection.scss
@@ -6,7 +6,8 @@
 }
 
 .details {
-  max-width: 30vw;
+  width: 30vw;
+  max-width: 30rem;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -20,7 +21,7 @@
 }
 
 .map {
-  min-width: 76rem;
+  min-width: 70vw;
   height: 100%;
   flex-grow: 2;
 }
